<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- ToDo: Modified -->
    <string name="app_name_maxk">KGI</string>
    <string name="topTitle">한국판촉물 제조협회</string>

    <!-- Main: Layout Only: 수정하지 않아도 됨, MemberDivData에서 수정 -->
    <string name="mainButton1Txt">전체 회원</string>
    <string name="mainButton2Txt">지역별 회원</string>
    <string name="mainButton3Txt">임원 구성</string>
    <string name="mainButton4Txt">위원회 구성</string>
    <string name="mainButton5Txt">전공별 그룹</string>
    <string name="mainButton6Txt">학과 그룹</string>
    <!-- Menu: Layout Only: 수정하지 않아도 됨, MemberDivData에서 수정 -->
    <string name="popup_menu3">협회 구성</string> -->
    <string name="book_info_title">협회 구성</string> -->
    <string name="bInfoButton1Txt">협회 구성1</string>
    <string name="bInfoButton2Txt">협의 수성2</string>
    <string name="bInfoButton3Txt">협회 구성3</string>
    <string name="bInfoButton4Txt">협회 구성4</string>
    <string name="bInfoButton5Txt">협회 구성5</string>
    <string name="bInfoButton6Txt">협회 구성6</string>
    <string name="bInfoButton20Txt">도움말</string>
    <string name="bInfoButton21Txt">이용약관</string>

    <!-- NOT Modified -->
    <string name="nb_copy_rights">2014 All Rights Reserved.</string>
    
    <string name="menuMain">메 인</string>
    <string name="menuSearch">검 색</string>
    <string name="menuSetting">설 정</string>
    <string name="menuLogin">로그인</string>
    <string name="menuAdmin">관리자</string>
    <string name="popup_menu">메 뉴</string>
    
    <string name="topTitle_memberGroup">인 명 부</string>
    <string name="topTitle_memberList">전 체 회 원</string>
    <string name="topTitle_memberInfo">상 세 정 보</string>
    <string name="topTitle_rightMenu"></string> <!-- 메 뉴 -->
    

    <string name="post_label">공지 보기</string>
    <string name="menu_title">공지 메뉴</string>
    <string name="action_refresh">다시 보기</string>
    <string name="action_new">공지 쓰기</string>
    
    <string name="write_post">공지 쓰기</string>
    <string name="post_no_text">공지 내용이 없습니다. 다시 쓰기 바랍니다.</string>
    <string name="post_error_write">공지 쓰기가 싶패했습니다.\n인터넷 연결을 확인하고 다시 쓰기 바랍니다.</string>
    <string name="post_error_admin">관리자만 공지 글을 쓸수 있습니다.\n관리자에 연락 바랍니다.</string>

    <!-- MemberInfo -->
    <string name="memberName">이름</string>
    <string name="memberMajor">전공</string>
    <string name="memberMajorName">일반 행정</string>
    
    <string name="memberSession">학기</string>
    <string name="memberSessionName">석사 4학기</string>
    
    <string name="memberCompany">직장명</string>
    <string name="memberCompanyName">서울시청 인사과</string>

    <string name="memberOffice">주소(직)</string>
    <string name="memberOfficeAddr">서울시 서울동 4567</string>
    <string name="memberHome">주소(집)</string>
    <string name="memberHomeAddr">서울시 서울동 1234</string>
   
    <string name="memberOfficeTel">전화(직)</string>
    <string name="memberOfficeTelNo">02-1234-4567</string>
    <string name="memberHomeTel">전화(집)</string>
    <string name="memberHomeTelNo">02-1234-4567</string>
    
    <string name="memberFax">팩스</string>
    <string name="memberFaxNo">070-1234-7890</string>
    
    <string name="memberMobilePhone">휴대폰</string>
    <string name="memberMobilePhoneNo">010-1234-7890</string>
    
    <string name="memberHomePage">홈페이지</string>
    <string name="memberHomePageUrl">http://www.seoul.co.kr</string>
    
    <string name="memberEmail">이메일</string>
    <string name="memberEmailAddr">who@are.you</string>
    
    <string name="memberPosition">직책</string>
    <string name="memberPositionName">과장</string>
    
    <string name="mailTitle">공지 메일</string>
    <string name="mailText">공지 메일입니다.</string> 
    <string name="mailSendMsg">공지 메일 선택...</string> 
    
    <string name="search_dialog_title">검 색</string> 
    <string name="search_hint">검색어 입력(이름,성등)</string>
    
    <string name="login_dialog_title">로그인</string> 
    <string name="login_hint">등록한 아이디나 전화번호 입력</string> 
    
    <string name="error_no_project_info">관련 정보가 없습니다.\n인터넷 연결을 확인하고 다시하기 바랍니다(P1).</string> 
    <string name="error_no_member_info">관련 회원 정보가 없습니다.\n인터넷 연결을 확인하고 다시하기 바랍니다(M1).</string> 
호
    <string name="popup_menu1">회원 명부</string> 
    <string name="popup_menu2">공지 사항</string>
    <!-- <string name="popup_menu3">학사 내용</string> -->
    <string name="popup_menu4">메인 화면</string> 
    <string name="popup_menu_setting">설정</string> 
    <string name="popup_menu_close">닫기</string> 
    
    <string name="kakao_app">카카오톡</string> 
    <string name="kakao_install_msg">카카오톡이 설최되어 있지 않습니다.\n앱을 설치하시겠습니까?</string> 
    <string name="kakao_app_key">927a704c0a5e9b4967b66d6d968c5ddd</string> 
    <string name="kakao_scheme">kakaoda927a704c0a5e9b4967b66d6d968c5ddd</string>
    <string name="kakaolink_host">kakaolink</string>
    
    <string name="pref_settings">설정</string>
    <string name="push_on">알림 받기</string>
    <string name="push_on_summary">모임 소식을 알림기능으로 알려드립니다.</string>
    
    <string name="help_info">도움말</string>
    <string name="use_info">이용 약관</string>
    <string name="ver_info">버전 정보</string>
    
    <string name="login_error_info">회원으로 가입되어 있지 않습니다.\n관리자에 문의 바랍니다.</string>
    <string name="login_passed">로그인 되었습니다.</string>
    
    <string name="member_error_info">회원 정보를 확인 할수 업습니다.\n관리자에 문의 바랍니다.</string>
    <string name="member_info_title">회원 확인</string>
    <string name="member_info_down_start">회원 정보를 확인 중입니다.\n확인이 완료될 때 까지 잠시만 기다려주시기 바랍니다.</string>
    <string name="member_info_down_end">회원 정보를 확인 확인했습니다.\n등록된 회원이면 사용이 가능합니다.</string>

    <string name="ceo_name">대표</string>
    <string name="comp_name">상호</string>
    <string name="since_day">입회</string>
    <string name="birth_day">생일</string>
    <string name="prod_name">생산품</string>

    <string name="stetho_missing">Stetho missing in %s build!</string>
</resources>