<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/topBanner"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:background="@color/top_banner"
        android:gravity="center" >

        <ImageView
            android:id="@+id/topLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dip"
            android:src="@drawable/top_logo"
            android:visibility="visible" />

        <TextView
            android:id="@+id/topTitle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/menuSetting"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:gravity="center|right" >

            <include
                android:id="@+id/topTitleRightMenu_ref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                layout="@layout/top_title_right_menu" />

            <ProgressBar
                android:id="@+id/topPb"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:gravity="center"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/main_view_bg"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_view_bg"
            android:orientation="vertical" >

            <include
                android:layout_width="match_parent"
                android:layout_height="1dip"
                layout="@layout/menu_devider_h" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/main_view_bg"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/push_on_txt"
                    android:layout_width="0dip"
                    android:layout_height="42dip"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/push_on"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/push_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:checked="true" />

            </LinearLayout>

            <include
                android:layout_width="match_parent"
                android:layout_height="1dip"
                layout="@layout/menu_devider_h" />

            <TextView
                android:id="@+id/help_info"
                android:layout_width="match_parent"
                android:layout_height="42dip"
                android:layout_margin="5dip"
                android:drawableRight="@*android:drawable/ic_menu_forward"
                android:gravity="center"
                android:text="@string/help_info"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <include
                android:layout_width="match_parent"
                android:layout_height="1dip"
                layout="@layout/menu_devider_h" />

            <TextView
                android:id="@+id/use_info"
                android:layout_width="match_parent"
                android:layout_height="42dip"
                android:layout_margin="5dip"
                android:drawableRight="@*android:drawable/ic_menu_forward"
                android:gravity="center"
                android:text="@string/use_info"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <include
                android:layout_width="match_parent"
                android:layout_height="1dip"
                layout="@layout/menu_devider_h" />

            <TextView
                android:id="@+id/ver_info"
                android:layout_width="match_parent"
                android:layout_height="42dip"
                android:layout_margin="5dip"
                android:drawableRight="@*android:drawable/ic_menu_forward"
                android:gravity="center"
                android:text="@string/ver_info"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <include
                android:layout_width="match_parent"
                android:layout_height="1dip"
                layout="@layout/menu_devider_h" />
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/menuBottom_ref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/menu_bottom" />

</LinearLayout>